<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    
    <!-- Main welcome menu -->
    <string name="playAgain_btn">PLAY AGAIN</string>
    <string name="play_btn">Play</string>
    <string name="scores_btn">HIGH SCORES</string>
    <string name="finish_btn">Home</string>
    <string name="exit_btn">Quit</string>
    <string name="aboutUs_btn">About Us</string>
    <string name="about_btn">This is about my android app "Mobile Quiz using WIFI"</string>
    <string name="title_activity_choice_">Choice_Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="lang_btn">Languages</string>
    <string name="os_btn">OS</string>
    <string name="dbms_btn">DBMS</string>
    <string name="playagain_btn">Play Again</string>

</resources>
