<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingTop="5dip" 
	android:paddingBottom="5dip"
	android:gravity="center_horizontal|bottom"
    android:baselineAligned="false"
    android:background="@android:color/white"
    android:id="@+id/llayout"
    android:textAlignment="center">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="500px"
            android:src="@drawable/ic_launcher" />


        <Button
            android:background="@android:color/holo_purple"
            android:id="@+id/playBtn"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/play_btn" 
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:onClick="NewGame"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:longClickable="false"
            android:focusableInTouchMode="true" />
        <Button
            android:background="@android:color/holo_purple"
            android:id="@+id/aboutBtn"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs_btn"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:nestedScrollingEnabled="false"
            android:onClick="onAbout"
            android:textStyle="bold"
            android:focusableInTouchMode="true" />

    <Button
        android:background="@android:color/holo_purple"
        android:id="@+id/exitBtn"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="@string/exit_btn"
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:onClick="exit"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:focusableInTouchMode="true" />

</LinearLayout>

